fixed alignment of componenets

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -165,9 +165,7 @@
      margin-right:12px ;
   border-radius: 4px !important;
 }
-.maincol-apply {
-    background-color: #e4e9ef;
-}
+
 .detailsContent {
     width: 80%;
     margin: 0px auto;
@@ -584,11 +582,10 @@ margin-left: 520px;
 
 }
  .detailsContentDiv-prosp{
-   display: table;
-   width: 35%;
+   width: 50%;
    margin-left:25%;
-
  }
+
 .button-style{
   text-align: center;
   width: 80px;
@@ -644,6 +641,7 @@ color:white;
   margin-right: 10px;
   background-color: darkgrey;
   padding: 5px 5px 5px 5px;
+
 }
 
 .panel-heading-custom {
@@ -782,6 +780,9 @@ color:white;
 }
 .upward{
   margin-top:-15px;
+}
+.up-margin{
+  margin-top:30px;
 }
 .upward-heading{
   margin-top:5%;
@@ -1163,20 +1164,7 @@ td:nth-child(1) {
 .location{color: #A29595;
   font-weight: normal;}
 
-.drop-box {
-  background: #F8F8F8;
-  border: 5px dashed #DDD;
-  height: 150px;
-  text-align: center;
-  padding-top: 25px;
-  margin: 10px;
-}
-.dragover {
-  border: 5px dashed blue;
-}
-.all-dateinputs{
-  padding-top:25px;
-}
+
 .main-container{
   padding:20px 30px;
 }
@@ -1753,4 +1741,20 @@ td:nth-child(1) {
   font-size: 20px;
   text-align: center;
   margin-left: 20px;
+}
+.detailsContentDiv-new{
+  display: table;
+  width: 80%;
+  margin-left: 10%;
+}
+.list-details{
+  width:30%;
+}
+.distance{
+  margin-bottom: 10px;
+}
+
+.dates{
+  margin-right: 10px;
+  color: black;
 }
